<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <!-- BURGER WITH TITLE -->

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/topbun"
        android:contentDescription="@string/app_name" />

    <!-- RADIO GROUP CONTAINING -->
    <!-- RADIO BUTTONS FOR BURGER PATTY TYPES -->

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/one"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:textSize="20sp" />
    </RadioGroup>

    <!-- CHECKBOX FOR PROSCIUTTO -->

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        android:layout_centerHorizontal="true"
        android:text="@string/prosciutto"
        android:textSize="16sp" />

    <!-- RADIO GROUP CONTAINING -->
    <!-- RADIO BUTTONS FOR CHEESE  TYPES -->

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox1"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/cheddar"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio4"
            style="@android:style/Widget.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provolone"
            android:textSize="16sp" />
    </RadioGroup>

    <!-- CAVIAR SAUCE SEGMENT -->
    <!-- CARIAR LABEL -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sauce"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- CARIAR SEEKBAR -->

    <!-- BURGER BUN BOTTOM -->

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_below="@+id/textView1"
        android:layout_alignLeft="@+id/radioGroup2"
        android:layout_alignRight="@+id/radioGroup2"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="-1dp"
        android:maxHeight="10dp"
        android:minHeight="10dp"
        android:progressTint="@color/design_default_color_error" />

    <!-- CALORIE OUTPUT TEXTVIEW -->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/bottombun" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:paddingTop="20dp"
        android:text="@string/calorie"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp" />


</RelativeLayout>